--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">QuickRun</string>
     <string name="app_introduce">每天快运动</string>
+    
+    <!--侧滑界面信息-->
+    <string name="navigation_item_home">首页</string>
+    <string name="navigation_item_theme">主题选择</string>
+    <string name="navigation_item_setting">设置与帮助</string>
+    <string name="navigation_itm_about">关于</string>
 </resources>
