--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Deambulation</string>
     <string name="app_introduce">每天快运动</string>
 
+    <!--顶部文字-->
+    <string name="main_toolbar_title_top">运动</string>
+
     <!--底部按钮信息-->
     <string name="bottom_run">运动</string>
     <string name="bottom_discovery">发现</string>
